--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "watch": "nodemon server.js",
+    "watch": "nodemon --inspect server.js",
     "db:migrate": "npx sequelize-cli db:migrate",
     "db:model:generate": "npx sequelize-cli model:generate --name your_model --attributes field:type"
   },
